# Octoprint-MFA-Passkeys

./: .gitattributes  .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
extras/: setup_cert_helper.sh
octoprint_mfa_passkeys/: __init__.py
octoprint_mfa_passkeys/scripts/: setup_cert_helper.sh
octoprint_mfa_passkeys/static/css/: passkeys.css
octoprint_mfa_passkeys/static/js/: passkeys.js
octoprint_mfa_passkeys/templates/: mfa_passkeys_generic.jinja2  mfa_passkeys_login.jinja2  mfa_passkeys_settings.jinja2  mfa_passkeys_usersettings.jinja2
