
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OctoPrint-Passkeys"
version = "0.2.11"
description = "Passkey-first login plugin for OctoPrint"
requires-python = ">=3.9,<4"
dependencies = [
  "webauthn>=2.7.1",
]
authors = [
  { name = "Daedalas1981", email = "daedalas1981@users.noreply.github.com" }
]
urls = { Homepage = "https://github.com/daedalas1981/OctoPrint-Passkeys" }
dynamic = ["license"]

[project.entry-points."octoprint.plugin"]
mfa_passkeys = "octoprint_mfa_passkeys"

